cabal-version:       2.4
name:                irc-core
version:             2.11
synopsis:            IRC core library for glirc
description:         IRC core library for glirc
                     .
                     The glirc client has been split off into <https://hackage.haskell.org/package/glirc>
license:             ISC
license-file:        LICENSE
author:              Eric Mertens
maintainer:          emertens@gmail.com
copyright:           2016 Eric Mertens
category:            Network
build-type:          Simple
extra-source-files:  ChangeLog.md
homepage:            https://github.com/glguy/irc-core
bug-reports:         https://github.com/glguy/irc-core/issues

source-repository head
  type: git
  location: git://github.com/glguy/irc-core.git
  branch: v2

library
  exposed-modules:     Irc.Codes
                       Irc.Commands
                       Irc.Identifier
                       Irc.Message
                       Irc.Modes
                       Irc.RateLimit
                       Irc.RawIrcMsg
                       Irc.UserInfo
  other-modules:       View

  build-depends:       base       >=4.11 && <4.17,
                       base64-bytestring >= 1.0.0.1 && <1.3,
                       attoparsec ^>=0.14,
                       bytestring >=0.10 && <0.12,
                       hashable   >=1.2  && <1.5,
                       primitive  >=0.6  && <0.8,
                       text       >=1.2  && <2.1,
                       time       >=1.6  && <1.12,
                       vector     >=0.11 && <0.13

  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  build-depends:       irc-core,
                       base,
                       text,
                       hashable,
                       HUnit >= 1.3 && < 1.7
  default-language:    Haskell2010
